<resources>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="hint_username">E-Mail Address</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_password">Password</string>
    <string name="hint_metric_name">Metric Name</string>
    <string name="hint_metric_goal">Metric Goal</string>
    <string name="hint_metric_measurement_period">Metric Measurement Period</string>
    <string name="hint_metric_measurement_type">Metric Measurement Type</string>
    <string name="empty_field_error">Please fill all the fields !</string>

    <!-- Transitions -->
    <string name="image_transition">imageTransition</string>

    <!-- Login Screen -->
    <string name="login_screen_sign_up_title">Don\'t have an account ?</string>
    <string name="login_screen_transition_login_to_register_icon">loginToRegisterEmailTransition</string>
    <string name="login_screen_transition_login_to_register_email">loginToRegisterEmailTransition</string>
    <string name="login_screen_transition_login_to_register_password">loginToRegisterPasswordTransition</string>
    <string name="login_screen_transition_login_to_register_button">loginToRegisterButtonTransition</string>
    <string name="login_screen_transition_login_to_register_title">loginToRegisterTitleTransition</string>


    <!-- Register Screen -->
    <string name="register_screen_description">Create an account</string>

    <!-- Home Screen -->
    <string name="home_screen_title">Wiki List</string>
    <string name="home_screen_card_view_text">Total Count</string>

    <!-- Detail Screen -->
    <string name="detail_screen_title">Metric Details</string>

    <!-- Add Or Update Metric Screen -->
    <string name="add_metric_screen_title">Add Metric</string>
    <string name="update_metric_screen_title">Update Metric</string>
    <string name="add_metric_success">Metric added successfully.</string>
    <string name="update_metric_success">Metric updated successfully.</string>

</resources>
