<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="addMetricHandler"
            type="com.mkpatir.itmswikiapp.presentation.ui.home.addmetric.AddMetricHandler" />
        <variable
            name="viewModel"
            type="com.mkpatir.itmswikiapp.presentation.ui.home.addmetric.AddMetricViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/base_margin_XXL">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addMetricTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_XXL"
            android:text="@string/add_metric_screen_title"
            android:textAppearance="@style/BigTextAppearance.Bold"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/metricName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/base_margin_XXL"
            android:background="@drawable/bg_edittext_curved_grey"
            android:hint="@string/hint_metric_name"
            app:layout_constraintTop_toBottomOf="@id/addMetricTitle"
            style="@style/EdittextStyle"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/metricGoal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/base_margin_M"
            android:background="@drawable/bg_edittext_curved_grey"
            android:hint="@string/hint_metric_goal"
            app:layout_constraintTop_toBottomOf="@id/metricName"
            style="@style/EdittextStyle"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/metricMeasurementPeriod"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/base_margin_M"
            android:background="@drawable/bg_edittext_curved_grey"
            android:hint="@string/hint_metric_measurement_period"
            app:layout_constraintTop_toBottomOf="@id/metricGoal"
            style="@style/EdittextStyle"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/metricMeasurementType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/base_margin_M"
            android:background="@drawable/bg_edittext_curved_grey"
            android:hint="@string/hint_metric_measurement_type"
            app:layout_constraintTop_toBottomOf="@id/metricMeasurementPeriod"
            style="@style/EdittextStyle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addMetricButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_M"
            android:text="@string/add"
            android:onClick="@{addMetricHandler.addMetric}"
            android:visibility="@{viewModel.addButtonVisibility ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/metricMeasurementType"
            style="@style/CurvedButtonStyle"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieView"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/base_margin_M"
            android:visibility="@{viewModel.lottieAnimationVisibility ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/metricMeasurementType"
            app:layout_constraintStart_toStartOf="@id/metricMeasurementType"
            app:layout_constraintEnd_toEndOf="@id/metricMeasurementType"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_paperplane"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>